# AppForge

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-win-msvc-2022_Qt6.8.yml
AfCore/: CMakeLists.txt
AfCore/include/AfCore/: CoreConstants.h  IComponent.h  IJsonSerializable.h  IPlugin.h  IPluginLoader.h  ObjectDescriptor.h  Plugin.h  Version.h
AfCore/src/: ComponentDescriptor.cpp  ComponentDescriptor.h  JsonHelper.cpp  JsonHelper.h  ObjectDescriptor.cpp  Plugin.cpp  PluginManager.cpp  PluginManager.h  Version.cpp
Core/: CMakeLists.txt
Core/include/AfCore/: CoreConstants.h  IComponentDescriptor.h  IJsonSerializable.h  Version.h
Core/include/Core/: CoreConstants.h
Core/src/: ComponentDescriptor.cpp  ComponentDescriptor.h  Version.cpp
